@@ -1,3 +1,8 @@
 wine.old
 old
 wine
+src/pyinstaller
+buildpyinstaller
+src/urlgrabber
+wubi.exe
+warnpyinstaller.txt
