@@ -1,0 +1,18 @@
+#!/bin/sh
+
+pyinstallerurl="http://pyinstaller.hpcf.upr.edu/source/1.3/pyinstaller_1.3.zip"
+
+root="$(cd ${0%/*}/../;pwd)"
+
+install_pyinstaller(){
+	echo "Installing pyinstaller..."
+	wget -P /tmp "$pyinstallerurl"
+	fname="${pyinstallerurl##*/}"
+	unzip "/tmp/$fname" -d /tmp/pyinstaller
+	cp -a "/tmp/pyinstaller/${fname%_*}"* "$root/src/pyinstaller"
+	wine "C:/python25/python.exe" "$root/src/pyinstaller/Configure.py"
+}
+
+if [ ! -e "$root/src/pyinstaller" ]; then
+	install_pyinstaller
+fi
