@@ -1,18 +1,0 @@
-#!/bin/sh
-
-root="$(cd ${0%/*}/../;pwd)"
-WINEPREFIX="$root"/wine
-pythonurl="http://www.python.org/ftp/python/2.5.2/python-2.5.2.msi"
-
-if [ ! -x /usr/bin/wine ]; then
-    echo "Could not find wine, please install it"
-    exit 1
-fi
-
-if [ ! -e "$root/wine" ]; then
-    echo "Creating wine folder..."
-    wineprefixcreate --prefix "$WINEPREFIX"
-    cd /tmp
-    wget "$pythonurl"
-    WINEPREFIX="$WINEPREFIX" wine msiexec /i /tmp/${pythonurl##*/} /qb /ADDLOCAL=DefaultFeature /ALLUSERS=1
-fi
