@@ -1,4 +1,3 @@
 #!/bin/sh
 root="$(cd ${0%/*}/../;pwd)"
-"$root"/tools/checkwine
-WINEPREFIX="$root"/wine wine c:/python25/python.exe $@
+"$root/tools/wine" c:/python25/python.exe $@
